style- fixed the text overflow issue and changed the background color

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,27 @@
 *{
-  margin:0;
-  background: #001f5c;
+  margin:5px;
   font-family: "Times New Roman", Times, serif;
   color: yellow
 }
 body{
+  background: #817a99;
   margin-left : 3vw;
   margin-top : 5vw;
   display: flex;
   flex-direction: column;
   color: white;
+   text-shadow:
+       3px 3px 0 #000,
+     -1px -1px 0 #000,  
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
+}
+
+#main{
+  border: 2px solid black;
+  border-radius: 5px;
+  background: #001b38;
 }
 
 .btn {
@@ -26,8 +38,9 @@ body{
   color: #ffffff;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
-  width: 20%;
+  width : 200px;
   margin-top: 5vh;
+  
 }
 
 .btn:hover {
@@ -43,12 +56,19 @@ body{
 textarea {
   width: 90%;
   height: 20%;
-  border-color : white;
+  color: black;
+}
+
+#outputText{
+  margin-top: 2.5vh;
 }
 
 #output {
-  border: 1px solid papayawhip;
+  border: 1px solid black;
   width: 90%;
   height: 20vh;
   margin-top: 5vh;
+  color: black;
+  background: white;
+  text-shadow:none;
 }
